tests/samples/compile_errors/erase_target/non_array.bas
Attribute VB_Name = "EraseNonArray"
Sub TestErase()
    Dim s As String
    Erase s  ' s is a String, not an array
End Sub
